# anvikshiki_ecosystem

./: .gitignore  GLOSSARY.md  README.md  SAGA.md  pyproject.toml  run_pipeline_e2e.py
anvikshiki_v4/: __init__.py  argumentation.py  contestation.py  coverage.py  datalog_engine.py  engine_factory.py  engine_params.py  engine_v4.py  extraction_eval.py  extraction_hitl.py  extraction_schema.py  grounding.py  kb_augmentation.py  optimize.py  predicate_extraction.py  query_refinement.py  reasoning_lm.py  schema.py  schema_v4.py  t2_compiler_v4.py  t2b_compiler.py  t3_compiler.py  t3a_retriever.py  uncertainty.py
anvikshiki_v4/data/: business_expert.yaml  business_expert_pipeline_trace.md  business_expert_query_trace.md  (+2 more)
discussions/: critical-audit-v4-implementation.md  ideal-architecture-properties.md  implementation-trace-t2b-t3a-t3b-coverage.md  proving-architecture-optimality.md  towards-categorical-uq-with-conformal-predictions.md
docs/: eli5_trace.md  eli5_trace_e2e.md  pipeline_eli5.md  pipeline_eli5_full.md  pipeline_flowchart_coverage_routing.md  pipeline_flowchart_llama3.2.md  pipeline_flowchart_llama3.2md.md  practical_usage.md  predicate_extraction_design.md  predicate_extraction_theory.md  run_trace_gemini_2.5_pro_2026-03-05.txt  webapp_design.md
scripts/: e2e_trace_coverage_pipeline.py  e2e_trace_gemini.py  test_glm5.py  test_glm5_discrepancy.py  trace_calltree.py  trace_glm5_grounding.py
theory/: ecosystem_evolution.md  thesis2_v1.md  thesis_v3.md  thesis_v4_r1.md  thesis_v4_r3.md
traces/: e2e_gemini_2026-03-06.md  e2e_gemini_full_2026-03-05.md
(+50 files in other folders)
